# rocky

./: .env.example  .gitignore  BUILD_YOUR_OWN_ROCKY.md  Benchmarking  README.md  asound.conf  demo_phrases.txt  pyproject.toml  rocky.py  stt_server.py  system_prompt.txt
Driver/: WhisPlay.py
lab/: gemma_server.py  piper_lgs.txt  piper_test.py  rocky_tts.py  rocky_v1.py  show_and_speak.py  simple.py  simple_audio_v.py  test.py
lab/astromech_test/: main.py
synthesizer/: rocky.py
