[project]
name = "rocky"
version = "0.1.0"
description = "Rocky Sound Generator (Project Hail Mary style) and Astromech sound generator."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lahiru Maramba", email = "llahiru@gmail.com" }
]
dependencies = [
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "ttastromech>=0.6.1",
    "google-genai>=0.3.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "spidev ; sys_platform == 'linux'",
    "gpiod ; sys_platform == 'linux'",
    "rpi-lgpio ; sys_platform == 'linux'",
]

[project.scripts]
rocky = "rocky:main"
r2d2 = "astromech_test.main:main"
rocky-server = "lab.gemma_server:main"
stt-server = "stt_server:main"

[project.optional-dependencies]
mac-server = [
    "librosa",
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "fastapi",
    "uvicorn",
    "soundfile",
    "gguf>=0.10.0",
    "mlx",
    "mlx-whisper",
    "openai>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lab/astromech_test", "lab/gemma_server.py"]
py-modules = ["rocky.py", "stt_server.py"]
